--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,3 +1,12 @@
+$azul1:#094FA4;
+$azul2:#006EC1;
+$azul3:#009EE5;
+$azul4:#52BCEC;
+$azul5:#89D1F3;
+$azul6:#B5E5F9;
+$azul7:#e7f6fd;
+
+$verde:#86C82D;
 body{
 	background: #f2f2f2;
 	.listado{
@@ -58,13 +67,6 @@ h1{
 	}
 	cursor: pointer;
 }
-// .barra{
-// background: #1d5794;
-// background: -moz-linear-gradient(top, #1d5794 0%, #1d5794 17%, #1d5794 17%, #127cc2 18%, #127cc2 36%, #127cc2 36%, #1ca7e5 37%, #1ca7e5 53%, #70b9ea 54%, #70b9ea 69%, #a1d2f3 71%, #a1d2f3 86%, #cae7fa 87%, #cae7fa 100%);
-// background: -webkit-linear-gradient(top, #1d5794 0%,#1d5794 17%,#1d5794 17%,#127cc2 18%,#127cc2 36%,#127cc2 36%,#1ca7e5 37%,#1ca7e5 53%,#70b9ea 54%,#70b9ea 69%,#a1d2f3 71%,#a1d2f3 86%,#cae7fa 87%,#cae7fa 100%);
-// background: linear-gradient(to bottom, #1d5794 0%,#1d5794 17%,#1d5794 17%,#127cc2 18%,#127cc2 36%,#127cc2 36%,#1ca7e5 37%,#1ca7e5 53%,#70b9ea 54%,#70b9ea 69%,#a1d2f3 71%,#a1d2f3 86%,#cae7fa 87%,#cae7fa 100%);
-// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d5794', endColorstr='#cae7fa',GradientType=0 );
-// }
 .barra {
     height: 100%;
     z-index: -1;
@@ -79,3 +81,61 @@ h1{
 .nav-tabs>li {
     background-color: #fff;
 }
+.regular-checkbox {
+    display: none;
+}
+.regular-checkbox + label {
+    background-color: #fff;
+    border: 2px solid $azul3;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 9px;
+    border-radius: 3px 3px 3px 3px;
+	-moz-border-radius: 3px 3px 3px 3px;
+	-webkit-border-radius: 3px 3px 3px 3px;
+    display: inline-block;
+    top: 2px;
+    position: relative;
+    margin: 1px 5px 5px 1px;
+}
+.regular-checkbox + label:active,
+.regular-checkbox:checked + label:active {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+.regular-checkbox:checked + label {
+    background-color: #fff;
+    border: 2px solid $azul3;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+    color: $azul3;
+}
+.regular-checkbox:checked + label:after {
+    content: '\2714';
+    font-size: 14px;
+    position: absolute;
+    top: -4px;
+    left: 3px;
+    color: $azul3;
+}
+.big-checkbox + label {
+    padding: 11px;
+}
+
+.big-checkbox:checked + label:after {
+    font-size: 22px;
+    left: 3px;
+    color: $azul3;
+}
+.tag {
+    font-family: Arial, sans-serif;
+    width: 200px;
+    position: relative;
+    top: 5px;
+    text-transform: uppercase;
+    display: block;
+    float: left;
+    color: $azul1;
+}
+.acomodo{
+	top: -6px;
+	left: -40px;
+}
+.vista{display: none;}
