--- a/jade/index.jade
+++ b/jade/index.jade
@@ -81,9 +81,12 @@ html
 											input(type="checkbox",id="checkbox-a" class="regular-checkbox big-checkbox")
 											label(for="checkbox-a")
 										.col-md-1.col-xs-6.text-center.vista.acomodo
-											i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+											i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar fecha vencimiento")
 										.col-md-1.col-xs-6.text-center.vista.acomodo(data-toggle="tooltip" data-placement="top" title="Eliminar")
 											i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+										.col-md-1.col-xs-12.text-center.vista.acomodo
+											a(href="#")
+												i.fa.fa-cloud-download.fa-2x.descarga(data-toggle="tooltip" data-placement="top" title="Descarga el archivo de los cupones seleccionados")
 									br
 								.col-md-12
 									.col-md-offset-1.col-md-10.campania
@@ -93,16 +96,18 @@ html
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a1" class="regular-checkbox big-checkbox")
 														label(for="checkbox-a1")
-													.col-md-5.col-xs-12.text-center
+													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
 														h3.panel-title Estatus:  
 															strong  Activo
+													.col-md-1.col-xs-6.text-center(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
+														i.fa.fa-eye.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Descripción")
 													.col-md-1.col-xs-6.text-center
 														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-													.col-md-1.col-xs-12.text-center
+													.col-md-1.col-xs-6.text-center
 														a(href="#")
 															i.fa.fa-cloud-download.fa-2x.ev.descarga(data-toggle="tooltip" data-placement="top" title="Descarga el archivo del cupón")
 															
@@ -124,11 +129,13 @@ html
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a2" class="regular-checkbox big-checkbox")
 														label(for="checkbox-a2")
-													.col-md-5.col-xs-12.text-center
+													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
 														h3.panel-title Estatus:  
 															strong  Activo
+													.col-md-1.col-xs-6.text-center(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
+														i.fa.fa-eye.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Descripción")
 													.col-md-1.col-xs-6.text-center
 														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
@@ -154,11 +161,13 @@ html
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a3" class="regular-checkbox big-checkbox")
 														label(for="checkbox-a3")
-													.col-md-5.col-xs-12.text-center
+													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
 														h3.panel-title Estatus:  
 															strong  Activo
+													.col-md-1.col-xs-6.text-center(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
+														i.fa.fa-eye.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Descripción")
 													.col-md-1.col-xs-6.text-center
 														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
@@ -183,11 +192,13 @@ html
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a4" class="regular-checkbox big-checkbox")
 														label(for="checkbox-a4")
-													.col-md-5.col-xs-12.text-center
+													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
 														h3.panel-title Estatus:  
 															strong  Activo
+													.col-md-1.col-xs-6.text-center(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
+														i.fa.fa-eye.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Descripción")
 													.col-md-1.col-xs-6.text-center
 														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
@@ -213,11 +224,13 @@ html
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a5" class="regular-checkbox big-checkbox")
 														label(for="checkbox-a5")
-													.col-md-5.col-xs-12.text-center
+													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
 														h3.panel-title Estatus:  
 															strong  Activo
+													.col-md-1.col-xs-6.text-center(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
+														i.fa.fa-eye.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Descripción")
 													.col-md-1.col-xs-6.text-center
 														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
@@ -469,7 +482,50 @@ html
 						h4 ¿Estas seguro de eliminar la campaña?
 					.modal-footer
 						button.btn.btn-default(type='button', data-dismiss='modal') Close
-						button.btn.btn-primary(type='button', data-dismiss='modal') Save changes
+						button.btn.btn-primary(type='button', data-dismiss='modal') Aceptar
+		// Modal
+		#myModalDescripcion.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+			.modal-dialog(role='document')
+				.modal-content
+					.modal-header
+						button.close(type='button', data-dismiss='modal', aria-label='Close')
+							span(aria-hidden='true') ×
+						h4.modal-title Titulo Cupón
+					.modal-body
+						.row
+							.col-md-6.col-xs-12.text-center
+								p Codigo cupón
+									strong  12/12/2017
+							.col-md-6.col-xs-12.text-center
+								p Descuento: 
+									strong  30%
+							.col-md-6.col-xs-12.text-center
+								p Fecha inicio: 
+									strong  12/12/2017
+							.col-md-6.col-xs-12.text-center
+								p Fecha termino: 
+									strong  12/12/2017
+						.row
+							.col-md-6.col-xs-12.text-center
+								p Fecha edición
+									strong  02/29/2020
+							.col-md-6.col-xs-12.text-center
+								p Tipo Edición
+									strong  Aumento de vigencia
+							
+						.row
+							.col-md-6.col-xs-12.text-center
+								p Sucursal
+									strong  12312312
+							.col-md-6.col-xs-12.text-center
+								p Clave puesto 
+									strong  12ASDFA
+							.col-md-6.col-xs-12.text-center
+								p Nombre Ejecutivo: 
+									strong  lkjhlkj asdfasdf aasd
+
+					.modal-footer
+						button.btn.btn-default(type='button', data-dismiss='modal') Close
 
 		// Modal
 		#myModalError.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
