--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -32,7 +32,7 @@ body{
 .ev{
 	cursor: pointer;
 }
-#myModalEliminar {
+#myModalEliminar, #myModalDescripcion {
     border-radius: 7px;
 	-moz-border-radius: 7px;
 	-webkit-border-radius: 7px;
