--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -145,3 +145,9 @@ h1{
 	left: -40px;
 }
 .vista{display: none;}
+.panel-heading {
+    padding: 5px 15px;
+}
+.panel {
+    margin-bottom: 10px;
+}
